--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ body {
   /* place-items: center; */
   min-width: 320px;
   height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
@@ -44,15 +45,7 @@ h2{
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 
 button:hover {
@@ -83,6 +76,7 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  /* position: relative; */
 }
 
 /* HEADER */
@@ -151,12 +145,14 @@ img{
   padding-bottom: 10px;
 }
 .table-overlay::-webkit-scrollbar{
-  width: 7px;
+  width: 0px;
 }
 .table-overlay::-webkit-scrollbar-thumb{
   background:teal;
   cursor: pointer;
 }
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
