--- a/src/style.css
+++ b/src/style.css
@@ -46,19 +46,24 @@ h2{
 
 button {
   cursor: pointer;
+  transition: all .3s linear;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  -ms-transition: all .3s linear;
+  -o-transition: all .3s linear;
 }
 
-button:hover {
+/* button:hover {
   border-color: #646cff;
 }
 
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 .card {
-  padding: 2em;
+  /* padding: 2em; */
   max-width: 480px;
 }
 
